adding audio wave

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -69,7 +69,7 @@ by tacklebox / lance encarnado (2023)
 				<p>So I’ve been working on this track Hate Me with a mystery feature…
 				<div class="audiocontainer">
 					<img class="playpausebtn" id="playpause-3a" src="assets/playbtn.png" alt="">
-					<!-- <canvas class="wavecanvas" id="canvas-3a"></canvas> -->
+					<canvas class="wavecanvas" id="canvas-3a"></canvas>
 					<audio id="hateme_audio">
 						<source src="assets/audio/hateme.mp3" type="audio/mpeg">
 					</audio>
@@ -85,10 +85,13 @@ by tacklebox / lance encarnado (2023)
 		<div class="container" id="container3b">
 			<div class="content">
 				<p>So I’ve been working on this track That Thing and Jada Kingdom is featured.
-				<p><img class="playpausebtn" id="playpause-3b" src="assets/playbtn.png" alt="">
-				<audio id="thatthing_audio">
-					<source src="assets/audio/thatthing.mp3" type="audio/mpeg">
-				</audio>
+				<div class="audiocontainer">
+					<img class="playpausebtn" id="playpause-3b" src="assets/playbtn.png" alt="">
+					<canvas class="wavecanvas" id="canvas-3b"></canvas>
+					<audio id="thatthing_audio">
+						<source src="assets/audio/thatthing.mp3" type="audio/mpeg">
+					</audio>
+				</div>
 				<div class="question">
 					What vibe does this put you in??
 				</div>
@@ -99,11 +102,14 @@ by tacklebox / lance encarnado (2023)
 
 		<div class="container" id="container3c">
 			<div class="content">
-				<p>So I’ve been working on this track I Just Wanna Love… Give it a listen here.
-				<p><img class="playpausebtn" id="playpause-3c" src="assets/playbtn.png" alt="">
-				<audio id="ijustwannalove_audio">
-					<source src="assets/audio/ijustwannalove.mp3" type="audio/mpeg">
-				</audio>
+			<p>So I’ve been working on this track I Just Wanna Love… Give it a listen here.
+				<div class="audiocontainer">
+					<img class="playpausebtn" id="playpause-3c" src="assets/playbtn.png" alt="">
+					<canvas class="wavecanvas" id="canvas-3c"></canvas>
+					<audio id="ijustwannalove_audio">
+						<source src="assets/audio/ijustwannalove.mp3" type="audio/mpeg">
+					</audio>
+				</div>
 				<div class="question">
 					When’s the last time you were in your feelings?
 				</div>
@@ -124,10 +130,13 @@ by tacklebox / lance encarnado (2023)
 
 		<div class="container" id="containerfinal">
 			<div class="content">
-				<p><img class="playpausebtn" id="playpause-final" src="assets/playbtn.png" alt="">
-				<audio id="final_audio">
-					<source src="assets/audio/final.mp3" type="audio/mpeg">
-				</audio>
+				<div class="audiocontainer">
+					<img class="playpausebtn" id="playpause-final" src="assets/playbtn.png" alt="">
+					<canvas class="wavecanvas" id="canvas-final"></canvas>
+					<audio id="final_audio">
+						<source src="assets/audio/final.mp3" type="audio/mpeg">
+					</audio>
+				</div>
 				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
