most notes done

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -25,39 +25,23 @@
 						<div class="page">
 							<img src="assets/guestbook_front_new.jpg" draggable="false" alt="" />
 						</div>
-						<!-- <div class="page innerpage"></div> -->
 						<div class="page innerpage">
 							<div class="guestbook_text">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus sed metus sed vulputate.
-								Aenean et quam nec justo accumsan volutpat. Praesent bibendum pharetra libero ac efficitur.
-								Etiam porttitor erat eget enim iaculis, at porttitor arcu gravida. Donec fringilla ipsum et molestie viverra.
-								Morbi ut interdum orci. Donec porta vulputate convallis.
+								I wanna give a special thank you to everybody that joined me on this experience.
+								This means so much to me. This means the world to me. I hope that I’ve been able
+								to make your day a little bit better, we can all use that sometimes. Anyway, hope you
+								enjoy the album. This is Mixed Emotions.
 								<div class="guestbook_name_and_area">
-									<br>- Jane Doe
-									<br>Toronto, ON
+									<img id="roy_signature" src="assets/roy_signature.png" alt="Roy Woods">
 								</div>
 							</div>
 						</div>
-						<div class="page innerpage">
-							<div class="guestbook_text">
-								Praesent bibendum pharetra libero ac efficitur.
-								Etiam porttitor erat eget enim iaculis, at porttitor arcu gravida. Donec fringilla ipsum et molestie viverra.
-								<div class="guestbook_name_and_area">
-									<br>- Jack
-									<br>New York, NY
-								</div>
-							</div>
-						</div>
-						<div class="page innerpage">
-							<div class="guestbook_text">
-								Vivamus condimentum sollicitudin convallis. Etiam id mauris odio. Etiam egestas et purus volutpat convallis.
-								Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.
-								<div class="guestbook_name_and_area">
-									<br>- John
-									<br>Ottawa, ON
-								</div>
-							</div>
-						</div>
+						<div class="page innerpage"></div>
+						<div class="page innerpage"></div>
+						<div class="page innerpage"></div>
+						<div class="page innerpage"></div>
+						<div class="page innerpage"></div>
+						<div class="page innerpage"></div>
 						<div class="page innerpage"></div>
 						<div class="page">
 							<img src="assets/guestbook_back.jpg" draggable="false" alt="" />
@@ -74,7 +58,7 @@
 
 		<div class="endpage_btn_div">
 			<button class="button" onclick="window.location.href='guestbook_entry.html';">
-				Leave a note for Roy Woods
+				Leave a journal note for Roy Woods
 			</button>
 		</div>
 
