--- a/MIXEDEMOTIONS/guestbook_entry.html
+++ b/MIXEDEMOTIONS/guestbook_entry.html
@@ -49,6 +49,14 @@
 				-webkit-appearance: none;
 			}
 
+			#notice {
+				position: relative;
+				margin: auto;
+				text-align: center;
+				width: 40vw;
+				padding-bottom: 1.5vw;
+			}
+
 			@media (hover: hover) {
 				.backtosite a:hover {
 					opacity: 0.5;
@@ -109,6 +117,9 @@
 
 				<input id="submitButton" type="submit" value="Submit" formtarget="_blank">
 			</form>
+		</div>
+		<div id="notice">
+			*Messages will appear in the Mixed Emotions Journal within 24 hours of submission.
 		</div>
 	</body>
 </html>
