new update for audio

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -10,7 +10,17 @@ by tacklebox / lance encarnado (2023)
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="theme-color" content="#000000">
 		<title>MIXED EMOTIONS - THE JOURNEY</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+		<link rel='stylesheet' href='https://unpkg.com/plyr@3/dist/plyr.css'><link rel="stylesheet" href="./style.css">
 		<link rel="stylesheet" href="css/base.css">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 	</head>
 	<body>
 		<video playsinline autoplay muted loop disablepictureinpicture preload="auto" id="watercolorIntro">
@@ -25,14 +35,9 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container1">
-			<!-- <audio id="container1_audio">
-				<source src="assets/audio/1_whatsup.mp3" type="audio/mpeg">
-			</audio> -->
 			<div class="content">
 				<div class="audiocontainer">
-					<img class="playpausebtn" id="playpause-1" src="assets/playbtn.png" alt="">
-					<canvas class="wavecanvas" id="canvas-1"></canvas>
-					<audio id="intro_audio">
+					<audio playsinline id="intro_audio">
 						<source src="assets/audio/intro.mp3" type="audio/mpeg">
 					</audio>
 				</div>
@@ -45,9 +50,6 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container2a">
-			<!-- <audio id="container2a_audio">
-				<source src="assets/audio/2a_sharesomething.mp3" type="audio/mpeg">
-			</audio> -->
 			<div class="content">
 				<img id="tracklistimg" src="assets/mixedemotions-tracklist.jpg" alt="MIXED EMOTIONS - TRACKLIST">
 				<p>I wanted to share something to make your day a little brighter. Here's my FULL tracklist for my album, Mixed Emotions.
@@ -73,8 +75,6 @@ by tacklebox / lance encarnado (2023)
 		<div class="container" id="container3a">
 			<div class="content">
 				<div class="audiocontainer">
-					<img class="playpausebtn" id="playpause-3a" src="assets/playbtn.png" alt="">
-					<canvas class="wavecanvas" id="canvas-3a"></canvas>
 					<audio id="hateme_audio" preload="auto">
 						<source src="assets/audio/hateme.mp3" type="audio/mpeg">
 					</audio>
@@ -91,8 +91,6 @@ by tacklebox / lance encarnado (2023)
 		<div class="container" id="container3b">
 			<div class="content">
 				<div class="audiocontainer">
-					<img class="playpausebtn" id="playpause-3b" src="assets/playbtn.png" alt="">
-					<canvas class="wavecanvas" id="canvas-3b"></canvas>
 					<audio id="thatthing_audio">
 						<source src="assets/audio/thatthing.mp3" type="audio/mpeg">
 					</audio>
@@ -109,8 +107,6 @@ by tacklebox / lance encarnado (2023)
 		<div class="container" id="container3c">
 			<div class="content">
 				<div class="audiocontainer">
-					<img class="playpausebtn" id="playpause-3c" src="assets/playbtn.png" alt="">
-					<canvas class="wavecanvas" id="canvas-3c"></canvas>
 					<audio id="ijustwannalove_audio">
 						<source src="assets/audio/ijustwannalove.mp3" type="audio/mpeg">
 					</audio>
@@ -137,8 +133,6 @@ by tacklebox / lance encarnado (2023)
 		<div class="container" id="containerfinal">
 			<div class="content">
 				<div class="audiocontainer">
-					<img class="playpausebtn" id="playpause-final" src="assets/playbtn.png" alt="">
-					<canvas class="wavecanvas" id="canvas-final"></canvas>
 					<audio id="final_audio">
 						<source src="assets/audio/final.mp3" type="audio/mpeg">
 					</audio>
@@ -146,76 +140,11 @@ by tacklebox / lance encarnado (2023)
 				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
 			</div>
 		</div>
-
-		<!-- <div class="container" id="containerfinal1a-1">
-			<div class="content">
-				<p>*OPTION 1A-1*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal1a-2">
-			<div class="content">
-				<p>*OPTION 1A-2*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal1b-1">
-			<div class="content">
-				<p>*OPTION 1B-1*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal1b-2">
-			<div class="content">
-				<p>*OPTION 1B-2*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal2a-1">
-			<div class="content">
-				<p>*OPTION 2A-1*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal2a-2">
-			<div class="content">
-				<p>*OPTION 2A-2*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal2b-1">
-			<div class="content">
-				<p>*OPTION 2B-1 ("A LITTLE DRAMA")*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div>
-
-		<div class="container" id="containerfinal2b-2">
-			<div class="content">
-				<p>*OPTION 2B-2 ("NOT ME")*
-				<p>
-				<p><button class="button" onclick="window.location.href='guestbook.html';">Continue</button>
-			</div>
-		</div> -->
-
 	</body>
 
 	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/gh/foobar404/wave.js/dist/bundle.js"></script> -->
-	<script src="js/howler.core.min.js"></script>
+	<script src='https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL'></script>
+  	<script src='https://unpkg.com/plyr@3'></script><script  src="./script.js"></script>
 	<script src="js/wave.js"></script>
 	<script src="js/index.js"></script>
 </html>
