--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="The new album by Roy Woods - Mixed Emotions - out July 28">
 		<title>MIXED EMOTIONS - THE JOURNEY</title>
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/guestbook.css">
