--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -50,9 +50,9 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container2a">
-			<div class="content">
+			<div class="content" id="content2a">
 				<img id="tracklistimg" src="assets/mixedemotions-tracklist.jpg" alt="MIXED EMOTIONS - TRACKLIST">
-				<p>I wanted to share something to make your day a little brighter. Here's my FULL tracklist for my album, Mixed Emotions.
+				<p id="pwithspacing">I wanted to share something to make your day a little brighter. Here's my FULL tracklist for my album, Mixed Emotions.
 				<div class="question">
 					What do you think?
 				</div>
