--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -63,6 +63,9 @@ by tacklebox / lance encarnado (2023)
 
 		<div class="container" id="container2b">
 			<div class="content">
+				<audio id="unsettling_audio" preload="auto">
+					<source src="assets/audio/unsettling.mp3" type="audio/mpeg">
+				</audio>
 				<p>I wanted to share part of an unreleased song that will be on the album with you, to keep up the good vibes of your day.
 				<div class="question">
 					What do you think of this song?
