new notes except for mobile bg

--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -67,7 +67,7 @@
 
 		<div class="endpage_btn_div">
 			<button class="button" onclick="window.location.href='guestbook_entry.html';">
-				Leave a journal note for Roy Woods
+				Leave a note for Roy Woods in this journal
 			</button>
 		</div>
 
