all new notes done

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -63,7 +63,7 @@ by tacklebox / lance encarnado (2023)
 
 		<div class="container" id="container2b">
 			<div class="content">
-				<div class="audiocontainer">
+				<div class="audiocontainer" id="audiocontainer2b">
 					<audio id="unsettling_audio" preload="auto">
 						<source src="assets/audio/unsettling.mp3" type="audio/mpeg">
 					</audio>
@@ -84,7 +84,7 @@ by tacklebox / lance encarnado (2023)
 						<source src="assets/audio/hateme.mp3" type="audio/mpeg">
 					</audio>
 				</div>
-				<p>So I’ve been working on this track Hate Me with a mystery feature…
+				<p>So I’ve been working on this track Hate Me with Coi Leray…
 				<div class="question">
 					What do you think?
 				</div>
@@ -138,7 +138,7 @@ by tacklebox / lance encarnado (2023)
 		<div class="container" id="containerfinal">
 			<div class="content">
 				<div class="question">
-					A message from me to you… 
+					A message from me to you…
 				</div>
 				<div class="audiocontainer">
 					<audio id="final_audio">
