--- a/MIXEDEMOTIONS/guestbook.html
+++ b/MIXEDEMOTIONS/guestbook.html
@@ -8,11 +8,11 @@
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/guestbook.css">
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#000000">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 	</head>
@@ -81,8 +81,7 @@
 		<div class="endpage_videos">
 			<h1>VIDEOS</h1>
 			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/14LFL8qszYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+			<p><iframe class="endpage_vid" src="https://www.youtube.com/embed/EQqjSC0nldg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 		</div>
 
 		<div class="socials">
