make that one scrollable

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -62,14 +62,14 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container2b">
-			<div class="content">
+			<div class="content" id="content2b">
 				<div class="audiocontainer" id="audiocontainer2b">
 					<audio id="unsettling_audio" preload="auto">
 						<source src="assets/audio/unsettling.mp3" type="audio/mpeg">
 					</audio>
 				</div>
 				<p>I wanted to share part of an unreleased song that will be on the album with you, to keep up the good vibes of your day.
-				<div class="question">
+				<div class="question qwithspacing">
 					What do you think of this song?
 				</div>
 				<p><button class="button" id="button3c" onclick="displayQuestion3c()">Let’s goooo, July 28th can’t come soon enough</button>
