--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -69,7 +69,7 @@ by tacklebox / lance encarnado (2023)
 					</audio>
 				</div>
 				<p>I wanted to share part of an unreleased song that will be on the album with you, to keep up the good vibes of your day.
-				<div class="question qwithspacing">
+				<div class="question">
 					What do you think of this song?
 				</div>
 				<p><button class="button" id="button3c" onclick="displayQuestion3c()">Let’s goooo, July 28th can’t come soon enough</button>
@@ -78,7 +78,7 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container3a">
-			<div class="content">
+			<div class="content" id="content3a">
 				<div class="audiocontainer">
 					<audio id="hateme_audio" preload="auto">
 						<source src="assets/audio/hateme.mp3" type="audio/mpeg">
@@ -94,7 +94,7 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container3b">
-			<div class="content">
+			<div class="content" id="content3b">
 				<div class="audiocontainer">
 					<audio id="thatthing_audio">
 						<source src="assets/audio/thatthing.mp3" type="audio/mpeg">
@@ -110,7 +110,7 @@ by tacklebox / lance encarnado (2023)
 		</div>
 
 		<div class="container" id="container3c">
-			<div class="content">
+			<div class="content" id="content3c">
 				<div class="audiocontainer">
 					<audio id="ijustwannalove_audio">
 						<source src="assets/audio/ijustwannalove.mp3" type="audio/mpeg">
