switch out julien embed tweet for img

--- a/MIXEDEMOTIONS/index.html
+++ b/MIXEDEMOTIONS/index.html
@@ -8,11 +8,25 @@ by tacklebox / lance encarnado (2023)
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="The new album by Roy Woods - Mixed Emotions - out July 28">
+		<meta name="description" content="The new album from Roy Woods - Mixed Emotions - out July 28">
 		<title>MIXED EMOTIONS - THE JOURNEY</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link rel='stylesheet' href='css/plyr.css'>
 		<link rel="stylesheet" href="css/base.css">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://mixedemotions.roywoods.com/">
+		<meta property="og:title" content="MIXED EMOTIONS - THE JOURNEY">
+		<meta property="og:description" content="The new album from Roy Woods - Mixed Emotions - out July 28.">
+		<meta property="og:image" content="https://mixedemotions.roywoods.com/assets/mixedemotions_ogpreview.jpg">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://mixedemotions.roywoods.com/">
+		<meta property="twitter:title" content="MIXED EMOTIONS - THE JOURNEY">
+		<meta property="twitter:description" content="The new album from Roy Woods - Mixed Emotions - out July 28">
+		<meta property="twitter:image" content="https://mixedemotions.roywoods.com/assets/mixedemotions_ogpreview.jpg">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
