--- a/wwshfonttest/index.html
+++ b/wwshfonttest/index.html
@@ -12,25 +12,25 @@
 
         @font-face {
             font-family: 'neuzeitgro-reg';
-            src: url("https://lanceencarnado.github.io/wwshfonttest/neuzeitgro-reg.woff");
+            src: url("https://lanceencarnado.github.io/wwshfonttest/neuzeitgro-reg.woff") format('woff');
         }
 
-        #test1 {
-            font-family: 'EurostileLTStdBoldExtended', Helvetica, sans-serif;
+        h1 {
+            font-family: 'EurostileLTStdBoldExtended', Helvetica, sans-serif !important;
         }
 
-        #test2 {
-            font-family: 'neuzeitgro-reg',Helvetica, sans-serif;
+        p {
+            font-family: 'neuzeitgro-reg',Helvetica, sans-serif !important;
         }
     </style>
 </head>
 <body>
-    <div id="test1">FONT TEST 1
+    <h1>FONT TEST 1
         <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </div>
+    </h1>
     <br><br>
-    <div id="test2">FONT TEST 2
+    <p>FONT TEST 2
         <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </div>
+    </p>
 </body>
 </html>
